@@ -43,8 +43,6 @@ class ApiEditPage extends ApiBase {
 
 	public function execute() {
 		global $wgUser;
-		$this->getMain()->requestWriteMode();
-
 		$params = $this->extractRequestParams();
 		if(is_null($params['title']))
 			$this->dieUsageMsg(array('missingparam', 'title'));
@@ -272,6 +270,10 @@ class ApiEditPage extends ApiBase {
 	}
 
 	public function mustBePosted() {
+		return true;
+	}
+
+	public function isWriteMode() {
 		return true;
 	}
 
